force-app/main/default/objects/Account/fields/GFSI_Certification__c.field-meta.xml
<CustomField>
    <fullName>GFSI_Certification__c</fullName>
    <inlineHelpText>Please input the name of the GFSI Cert</inlineHelpText>
    <label>GFSI Certification</label>
    <length>30</length>
    <type>Text</type>
</CustomField>