force-app/main/default/objects/Account/fields/GMO_Free_statement__c.field-meta.xml
<CustomField>
    <fullName>GMO_Free_statement__c</fullName>
    <label>GMO Free statement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (GMO free)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>