force-app/main/default/objects/Account/fields/GMP__c.field-meta.xml
<CustomField>
    <fullName>GMP__c</fullName>
    <label>GMP+</label>
    <length>30</length>
    <type>Text</type>
</CustomField>