force-app/main/default/objects/Account/fields/Heavy_Metals_Statement__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Metals_Statement__c</fullName>
    <label>Heavy Metals Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>