force-app/main/default/objects/Account/fields/Import_license_derogation__c.field-meta.xml
<CustomField>
    <fullName>Import_license_derogation__c</fullName>
    <label>Import license/derogation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>