force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Dairy drinks and beverages</fullName>
            </value>
            <value>
                <fullName>Sweetened condensed &amp; Evap</fullName>
            </value>
            <value>
                <fullName>Confectionary &amp; Snack</fullName>
            </value>
            <value>
                <fullName>UHT</fullName>
            </value>
            <value>
                <fullName>Dairy creamer</fullName>
            </value>
            <value>
                <fullName>Cheese</fullName>
            </value>
            <value>
                <fullName>Dairy powder blends</fullName>
            </value>
            <value>
                <fullName>Fat blends</fullName>
            </value>
            <value>
                <fullName>Ice cream</fullName>
            </value>
            <value>
                <fullName>IMF &amp; GUMP</fullName>
            </value>
            <value>
                <fullName>Sports and health nutrition</fullName>
            </value>
            <value>
                <fullName>Yoghurt</fullName>
            </value>
            <value>
                <fullName>Fatfilled</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Repacking</fullName>
            </value>
            <value>
                <fullName>Non-food (technical)</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Processed cheese</fullName>
            </value>
            <value>
                <fullName>White cheese</fullName>
            </value>
            <value>
                <fullName>Food service</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Soup &amp; Sauces</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Egg replacer</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Flavouring</fullName>
            </value>
            <value>
                <fullName>Ready to Meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>