force-app/main/default/objects/Account/fields/Instructions_for_Un_loading_hours__c.field-meta.xml
<CustomField>
    <fullName>Instructions_for_Un_loading_hours__c</fullName>
    <label>Instructions for (Un)loading hours</label>
    <type>TextArea</type>
</CustomField>