force-app/main/default/objects/Account/fields/JDE_Counterparty_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Counterparty_Number__c</fullName>
    <label>JDE Counterparty Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>