force-app/main/default/objects/Account/fields/JDE_Status__c.field-meta.xml
<CustomField>
    <fullName>JDE_Status__c</fullName>
    <label>JDE Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>