force-app/main/default/objects/Account/fields/Legalization_Whom_Where__c.field-meta.xml
<CustomField>
    <fullName>Legalization_Whom_Where__c</fullName>
    <inlineHelpText>If legalization is required, by whom and where?  You can add the required documents for legalization in the next field.</inlineHelpText>
    <label>Notes Provided by Jolanda</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Logistics_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chamber of Commerce in beneficiary country</fullName>
            </value>
            <value>
                <fullName>Chamber of Commerce in country of origin</fullName>
            </value>
            <value>
                <fullName>Invoice by CoC in beneficiary country, other docs at origin</fullName>
            </value>
            <value>
                <fullName>Embassy in beneficiary country</fullName>
            </value>
            <value>
                <fullName>Embassy in country of origin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>