force-app/main/default/objects/Account/fields/Legalizations_by_CoC__c.field-meta.xml
<CustomField>
    <fullName>Legalizations_by_CoC__c</fullName>
    <inlineHelpText>Legalizations by CoC and/or Embassy required for this customer?</inlineHelpText>
    <label>Legalizations by CoC</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Logistics_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>