force-app/main/default/objects/Account/fields/Legalizations_CoC_and_or_Embassy__c.field-meta.xml
<CustomField>
    <fullName>Legalizations_CoC_and_or_Embassy__c</fullName>
    <label>Legalizations CoC and/or Embassy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>