force-app/main/default/objects/Account/fields/Loading_Requirements2__c.field-meta.xml
<CustomField>
    <fullName>Loading_Requirements2__c</fullName>
    <inlineHelpText>Does the customer have any demand on loading loose or on pallets?</inlineHelpText>
    <label>Loading Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Logistics_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loose</fullName>
            </value>
            <value>
                <fullName>IPPC Pallets</fullName>
            </value>
            <value>
                <fullName>Loose or IPPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>