force-app/main/default/objects/Account/fields/Loading_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Loading_Requirements__c</fullName>
    <label>Loading Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>