force-app/main/default/objects/Account/fields/Logistics__c.field-meta.xml
<CustomField>
    <fullName>Logistics__c</fullName>
    <label>Logistics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>