force-app/main/default/objects/Account/fields/Logistics_Category__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Category__c</fullName>
    <label>Logistics Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>EU &amp; Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>