force-app/main/default/objects/Account/fields/Max_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Credit_Limit__c</fullName>
    <label>Max Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>