force-app/main/default/objects/Account/fields/MaxAVGDays__c.field-meta.xml
<CustomField>
    <fullName>MaxAVGDays__c</fullName>
    <formula>MAX(Avg_Days_to_Pay__c,AR_Terms__c,accmterms_days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MaxAVGDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>