force-app/main/default/objects/Account/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Visit</fullName>
            </value>
            <value>
                <fullName>Video Conferencing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>