force-app/main/default/objects/Account/fields/Melamine_Statement__c.field-meta.xml
<CustomField>
    <fullName>Melamine_Statement__c</fullName>
    <label>Melamine Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>