force-app/main/default/objects/Account/fields/Moisture_Absorbers__c.field-meta.xml
<CustomField>
    <fullName>Moisture_Absorbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moisture Absorbers</label>
    <type>Checkbox</type>
</CustomField>