force-app/main/default/objects/Account/fields/MSDS_Item__c.field-meta.xml
<CustomField>
    <fullName>MSDS_Item__c</fullName>
    <label>MSDS Item</label>
    <length>30</length>
    <type>Text</type>
</CustomField>