force-app/main/default/objects/Account/fields/No_growth_promotors__c.field-meta.xml
<CustomField>
    <fullName>No_growth_promotors__c</fullName>
    <label>No growth promotors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No requirements on no-growth promotors</fullName>
            </value>
            <value>
                <fullName>rBST</fullName>
            </value>
            <value>
                <fullName>rBGH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>