force-app/main/default/objects/Account/fields/Organic__c.field-meta.xml
<CustomField>
    <fullName>Organic__c</fullName>
    <label>Organic</label>
    <length>30</length>
    <type>Text</type>
</CustomField>