force-app/main/default/objects/Account/fields/Organic_Certificate_Required__c.field-meta.xml
<CustomField>
    <fullName>Organic_Certificate_Required__c</fullName>
    <label>Organic Certificate Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>