force-app/main/default/objects/Account/fields/Origin_requirement__c.field-meta.xml
<CustomField>
    <fullName>Origin_requirement__c</fullName>
    <label>Origin requirement</label>
    <type>TextArea</type>
</CustomField>