force-app/main/default/objects/Account/fields/Other_Country_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Country_Requirements__c</fullName>
    <inlineHelpText>Do you want to add any information on the selected country requirement for this customer?</inlineHelpText>
    <label>Other Country Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>