force-app/main/default/objects/Account/fields/Others_Pending__c.field-meta.xml
<CustomField>
    <fullName>Others_Pending__c</fullName>
    <label>Others Pending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>