force-app/main/default/objects/Account/fields/Outstanding_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Contracts__c</fullName>
    <label>Outstanding Contracts</label>
    <length>30</length>
    <type>Text</type>
</CustomField>