force-app/main/default/objects/Account/fields/Outstanding_Payments__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Payments__c</fullName>
    <label>Outstanding Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>