force-app/main/default/objects/Account/fields/Packaging_compliance_food_grade__c.field-meta.xml
<CustomField>
    <fullName>Packaging_compliance_food_grade__c</fullName>
    <label>Packaging compliance food grade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No requirement on packaging compliance</fullName>
            </value>
            <value>
                <fullName>Packaging declaration of conformity / statement</fullName>
            </value>
            <value>
                <fullName>Migration report</fullName>
            </value>
            <value>
                <fullName>Packaging specification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>