force-app/main/default/objects/Account/fields/Packing_requirements__c.field-meta.xml
<CustomField>
    <fullName>Packing_requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packing requirements</label>
    <type>Checkbox</type>
</CustomField>