force-app/main/default/objects/Account/fields/Pallet_label__c.field-meta.xml
<CustomField>
    <fullName>Pallet_label__c</fullName>
    <label>Pallet label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>