force-app/main/default/objects/Account/fields/Pallets__c.field-meta.xml
<CustomField>
    <fullName>Pallets__c</fullName>
    <label>Pallets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>