force-app/main/default/objects/Account/fields/Partly_hydrogenated_oils__c.field-meta.xml
<CustomField>
    <fullName>Partly_hydrogenated_oils__c</fullName>
    <label>Partly hydrogenated oils</label>
    <length>30</length>
    <type>Text</type>
</CustomField>