force-app/main/default/objects/Account/fields/Past_Due_AR__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_AR__c</fullName>
    <label>Past Due AR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>