force-app/main/default/objects/Account/fields/Past_Due_Total__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Total__c</fullName>
    <label>Past Due Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>