force-app/main/default/objects/Account/fields/PaymentTermsCode__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermsCode__c</fullName>
    <label>PaymentTermsCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>