force-app/main/default/objects/Account/fields/Pending_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approvals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pending Approvals</label>
    <referenceTo>Approval__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>