force-app/main/default/objects/Account/fields/Pending_claims__c.field-meta.xml
<CustomField>
    <fullName>Pending_claims__c</fullName>
    <label>Pending Claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>