force-app/main/default/objects/Account/fields/Pending_Offers__c.field-meta.xml
<CustomField>
    <fullName>Pending_Offers__c</fullName>
    <label>Pending Offers</label>
    <length>30</length>
    <type>Text</type>
</CustomField>