force-app/main/default/objects/Account/fields/Pending_projects__c.field-meta.xml
<CustomField>
    <fullName>Pending_projects__c</fullName>
    <label>Pending Projects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>