force-app/main/default/objects/Account/fields/Pesticides_incl_dioxins__c.field-meta.xml
<CustomField>
    <fullName>Pesticides_incl_dioxins__c</fullName>
    <label>Pesticides, incl dioxins</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No requirement on pesticides</fullName>
            </value>
            <value>
                <fullName>On monitoring basis</fullName>
            </value>
            <value>
                <fullName>On batch level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>