force-app/main/default/objects/Account/fields/Pesticides_Incl_Dioxins_Statement__c.field-meta.xml
<CustomField>
    <fullName>Pesticides_Incl_Dioxins_Statement__c</fullName>
    <label>Pesticides, Incl. Dioxins Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>