force-app/main/default/objects/Account/fields/Plant_Number__c.field-meta.xml
<CustomField>
    <fullName>Plant_Number__c</fullName>
    <label>Plant Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>