force-app/main/default/objects/Account/fields/Pre_Certificate_Within_EU__c.field-meta.xml
<CustomField>
    <fullName>Pre_Certificate_Within_EU__c</fullName>
    <label>Pre-Certificate Within EU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>