force-app/main/default/objects/Account/fields/Pre_shipment_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Pre_shipment_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-shipment Inspection</label>
    <type>Checkbox</type>
</CustomField>