force-app/main/default/objects/Account/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority Level</label>
    <length>30</length>
    <type>Text</type>
</CustomField>