force-app/main/default/objects/Account/fields/QM_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>QM_Contact_Name__c</fullName>
    <label>QM Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>