force-app/main/default/objects/Account/fields/QM_Country__c.field-meta.xml
<CustomField>
    <fullName>QM_Country__c</fullName>
    <label>QM Country</label>
    <length>15</length>
    <type>Text</type>
</CustomField>