force-app/main/default/objects/Account/fields/QM_Email__c.field-meta.xml
<CustomField>
    <fullName>QM_Email__c</fullName>
    <label>QM Email</label>
    <type>Email</type>
</CustomField>