force-app/main/default/objects/Account/fields/QM_Phone__c.field-meta.xml
<CustomField>
    <fullName>QM_Phone__c</fullName>
    <label>QM Phone</label>
    <type>Phone</type>
</CustomField>